Now saves to cookies and restores previous session on load. Also squashed bug where card positions wouldn't update sometimes (how did I not see this earlier?)

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h1 {
 }
 
 p {
-    line-height: 2em;
+    line-height: 1.5em;
 }
 
 button {
